fix button text alignment

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header h1 {
   background: #06d6a0;
   color: #073b4c;
   border-radius: 0 20px 20px 0;
+  text-align: center;
 }
 
 .item-list {
